--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -1,9 +1,7 @@
 ---
 # tasks file for ansible-bootstrap_core
-
-- name: '[main] Install sudo package'
-  package: name=sudo state=present
-  become: yes
+- name: "[main] include dependencies installation tasks"
+  include_tasks: dependencies.yml
   tags:
     - bootstrap_core
 
