--- a/meta/main.yml
+++ b/meta/main.yml
@@ -19,10 +19,13 @@ galaxy_info:
     - 7
 
   galaxy_tags:
-    - Minibian
-    - headless
+    - minibian
+    - raspberrypi
+    - debian
+    - jessie
+    - stretch
 
 dependencies:
-  - drew-kun.rpi_expandfs
-  - { role: drew-kun.rpi3_network, when: ansible_os_family == 'Debian' }
+  - drew_kun.rpi_expandfs
+  - { role: drew_kun.rpi3_network, when: ansible_os_family == 'Debian' }
 ...
