--- a/meta/main.yml
+++ b/meta/main.yml
@@ -27,6 +27,8 @@ galaxy_info:
     - stretch
 
 dependencies:
-  - drew_kun.rpi_expandfs
-  - { role: drew_kun.rpi3_network, when: ansible_os_family == 'Debian' }
+- drew-kun.rpi_expandfs
+- role: drew-kun.rpi3_network
+  rpi3_network_wifi_APs: "{{ bootstrap_core___rpi3_network_wifi_APs }}"
+  when: ansible_os_family == 'Debian'
 ...
