--- a/meta/main.yml
+++ b/meta/main.yml
@@ -27,7 +27,7 @@ galaxy_info:
   - stretch
 
 dependencies:
-- drew-kun.rpi_expandfs
+- role: drew-kun.rpi_expandfs
 - role: drew-kun.rpi3_network
   rpi3_network_wifi_APs: "{{ bootstrap_core__rpi3_network_wifi_APs }}"
   when: ansible_os_family == 'Debian'
