--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -8,6 +8,50 @@
   - bootstrap_core
   - bootstrap_core_dependencies
 
+# OS-SPECIFIC VARS & TASKS
+- name: "[main] Include {{ ansible_os_family }}-specific vars"
+  include_vars: "{{ ansible_os_family }}.yml"
+  tags:
+  - bootstrap_core
+
+- name: "[main] Include {{ ansible_os_family }}-specific tasks for generating locales, upgrading distro etc."
+  include_tasks: "{{ ansible_os_family }}.yml"
+  tags:
+  - bootstrap_core
+
+# USERS
+- name: "[main] Create specified users"
+  user:
+    name: "{{ item.username }}"
+    password: "{{ item.passwd }}"
+    groups: "{{ item.groups }}"
+    append: yes
+    shell: /bin/bash
+  with_items: "{{ bootstrap_core_users }}"
+  become: yes
+  no_log: yes  # don't show password hash in output
+  tags:
+  - bootstrap_core
+
+# Fully quoted because of the ':' on the line. See the Gotchas in the YAML docs.
+- name: "[main] Modify sudoers file: make sudo group members not being asked for sudo password"
+  lineinfile:
+    path: /etc/sudoers
+    state: present
+    regexp: '^%{{ bootstrap_core_su_group }}\s'
+    line: '%{{ bootstrap_core_su_group }} ALL=(ALL) NOPASSWD: ALL'
+    validate: '/usr/sbin/visudo -cf %s'
+  become: yes
+  when: bootstrap_core_sudonopasswd is defined and true
+  tags:
+  - bootstrap_core
+
+- name: 'Change root password'
+  user: name=root password={{ bootstrap_core_new_root_passwd }}
+  when: ansible_user_id != 'root'
+  become: yes
+  no_log: yes  # don't show password hash in output
+
 # SHELL PROMPT
 - name: "[main] Include shell prompt configuration tasks"
   include_tasks: prompt.yml
@@ -63,48 +107,4 @@
   become: yes
   tags:
   - bootstrap_core
-
-# OS-SPECIFIC TASKS
-- name: "[main] Include {{ ansible_os_family }}-specific vars"
-  include_vars: "{{ ansible_os_family }}.yml"
-  tags:
-  - bootstrap_core
-
-- name: "[main] Include {{ ansible_os_family }}-specific tasks for generating locales, upgrading distro etc."
-  include_tasks: "{{ ansible_os_family }}.yml"
-  tags:
-  - bootstrap_core
-
-# Fully quoted because of the ':' on the line. See the Gotchas in the YAML docs.
-- name: "[main] Modify sudoers file: make sudo group members not being asked for sudo password"
-  lineinfile:
-    path: /etc/sudoers
-    state: present
-    regexp: '^%{{ bootstrap_core_su_group }}\s'
-    line: '%{{ bootstrap_core_su_group }} ALL=(ALL) NOPASSWD: ALL'
-    validate: '/usr/sbin/visudo -cf %s'
-  become: yes
-  when: bootstrap_core_sudonopasswd is defined and true
-  tags:
-  - bootstrap_core
-
-# USERS
-- name: "[main] Create specified users"
-  user:
-    name: "{{ item.username }}"
-    password: "{{ item.passwd }}"
-    groups: "{{ item.groups }}"
-    append: yes
-    shell: /bin/bash
-  with_items: "{{ bootstrap_core_users }}"
-  become: yes
-  no_log: yes  # don't show password hash in output
-  tags:
-  - bootstrap_core
-
-- name: 'Change root password'
-  user: name=root password={{ bootstrap_core_new_root_passwd }}
-  when: ansible_user_id != 'root'
-  become: yes
-  no_log: yes  # don't show password hash in output
 ...
