--- a/tasks/dependencies.yml
+++ b/tasks/dependencies.yml
@@ -6,6 +6,8 @@
     - locales
     state: present
   become: yes
+  register: bootstrap_core_dep_result
+  until: bootstrap_core_dep_result is succeeded
   tags:
   - bootstrap_core
   - bootstrap_core_dependencies
@@ -13,6 +15,8 @@
 - name: '[dependencies] Install pi-bluetooth package'
   package: name=pi-bluetooth state=present
   become: yes
+  register: bootstrap_core_dep_result
+  until: bootstrap_core_dep_result is succeeded
   when: bootstrap_core_bluetooth
   tags:
   - bootstrap_core
@@ -21,6 +25,8 @@
 - name: '[dependencies] Install ralink firmware package'
   package: name=firmware-ralink state=present
   become: yes
+  register: bootstrap_core_dep_result
+  until: bootstrap_core_dep_result is succeeded
   when: bootstrap_core_ralink_firmware
   tags:
   - bootstrap_core
