--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,5 +1,5 @@
 ---
-# defaults file for ansible-bootstrap_core
+# defaults file for ansible-rpi_bootstrap
 
 # CREATE YOUR OWN PASSWORD HASHES
 # NOTE:Following instructions for some reason does not work on Mac
@@ -21,39 +21,40 @@
 # But storing hashes even in encrypted vault adds additional security
 
 # root password SHA512 hash with random salt
-bootstrap_core_new_root_passwd:
+rpi_bootstrap_new_root_passwd:
   $6$pXE2fAZd0vgD77JQ$.c6I7FAFd/b1VV3Q4fm6VKnC29eXf3X.5TR5acIJ9xr3y/Bt0umoEH.b8nX3SqcZgZ3h5uhaoqNN6EAsU69Yn.
 
 # user0 password SHA512 hash with random salt
-bootstrap_core_user0_passwd:
+rpi_bootstrap_user0_passwd:
   $6$H7pExvH3BNgE4eFk$YWRzY/GMsfbXJK6cfx4hgR1c8ayY78ifIJMOXR91NA3xeo.T8Yb8E3SiQ2DYQLTohcX.WV1qGjGiQXdq6j5HB1
 
-bootstrap_core_sudonopasswd: yes
+rpi_bootstrap_sudonopasswd: yes
 
-bootstrap_core_users:
+rpi_bootstrap_users:
 - username: user
-  passwd: "{{ bootstrap_core_user0_passwd }}"
+  passwd: "{{ rpi_bootstrap_user0_passwd }}"
   groups:
-  - "{{ bootstrap_core_su_group }}"
+  - "{{ rpi_bootstrap_su_group }}"
 
-bootstrap_core_bluetooth: yes
+rpi_bootstrap_bluetooth: true
 
-bootstrap_core_ralink_firmware: no
+rpi_bootstrap_ralink_firmware: false
 
-bootstrap_core_firmware_update: no
+rpi_bootstrap_firmware_update: false
 
-bootstrap_core_hostname: raspberry.domain
+rpi_bootstrap_hostname: raspberry.domain
 
-bootstrap_core_locale: en_US.UTF-8
+rpi_bootstrap_locale: en_US.UTF-8
 
-bootstrap_core_timezone: UTC
+rpi_bootstrap_timezone: UTC
 
-# Overriding rpi3_network role defaults
+rpi_bootstrap_prompt: false
+# Overriding rpi_network role defaults
 # This is needed for passing the vault-encrypted values to network role as a dependancy from playbooks.
 # NOTE: please make sure you override this in your playbooks and encrypt all sensetive data with ansible-vault
-bootstrap_core__rpi3_network_wifi_APs:
+rpi_bootstrap__rpi_network_wifi_APs:
 - id_str: home
-  hidden: no            # yes | no
+  hidden: false         # true | false
   essid: home_wifi      # requried
   passphrase: P@$$w0rd  # can be 8-63 chars or empty (for unsecured networks)
   priority: 10  # when multiple networks are available, the one with the highest priority value is selected
