--- a/tasks/prompt.yml
+++ b/tasks/prompt.yml
@@ -6,15 +6,15 @@
   stat: path=/etc/skel
   register: skel_stat
   tags:
-  - bootstrap_core
-  - bootstrap_core_prompt
+  - rpi_bootstrap
+  - rpi_bootstrap_prompt
 
 - name: "[prompt] Check if /etc/skel.dist exists (in case /etc/skel was already backed up)"
   stat: path=/etc/skel.dist
   register: skel_dist_stat
   tags:
-  - bootstrap_core
-  - bootstrap_core_prompt
+  - rpi_bootstrap
+  - rpi_bootstrap_prompt
 
 - name: "[prompt] Backup distro /etc/skel"
   command: mv /etc/skel /etc/skel.dist
@@ -23,19 +23,19 @@
   - skel_stat.stat.exists
   - not skel_dist_stat.stat.exists
   tags:
-  - bootstrap_core
-  - bootstrap_core_prompt
+  - rpi_bootstrap
+  - rpi_bootstrap_prompt
 
 - name: "[prompt] Copying /etc/skel contents"
   copy: src=etc_skel/ dest=/etc/skel
   become: yes
   tags:
-  - bootstrap_core
-  - bootstrap_core_prompt
+  - rpi_bootstrap
+  - rpi_bootstrap_prompt
 
 - name: "[prompt] Copying .bashrc and .profile to home directory of current user"
   copy: src=etc_skel/ dest="{{ ansible_env.HOME }}/"
   tags:
-  - bootstrap_core
-  - bootstrap_core_prompt
+  - rpi_bootstrap
+  - rpi_bootstrap_prompt
 #=====================================
