--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,7 +2,7 @@ galaxy_info:
   role_name: rpi_bootstrap
   author: Andrew Shagayev
 
-  description: Ansible role for Raspberry Pi vanilla Minibian (Debian based) distro bootstrap.
+  description: Ansible role for Raspberry Pi vanilla distro bootstrap.
 
   license: MIT
 
@@ -28,6 +28,7 @@ galaxy_info:
   - jessie
   - stretch
   - bullseye
+  - centos_7
 
 dependencies:
 - role: drew1kun.rpi_network
