--- a/meta/main.yml
+++ b/meta/main.yml
@@ -1,35 +1,28 @@
 galaxy_info:
   role_name: rpi_bootstrap
   author: Andrew Shagayev
-
   description: Ansible role for Raspberry Pi vanilla distro bootstrap.
-
   license: MIT
-
   min_ansible_version: 1.2
-
-  github_branch: master
-
+  github_branch: main
   platforms:
-  - name: Debian
-    versions:
+    - name: Debian
+      versions:
+        - jessie
+        - stretch
+        - bullseye
+    - name: EL
+      versions:
+        - 7
+  galaxy_tags:
+    - minibian
+    - raspberrypi
+    - raspberry_pi_os
+    - debian
     - jessie
     - stretch
     - bullseye
-  - name: EL
-    versions:
-    - 7
-
-  galaxy_tags:
-  - minibian
-  - raspberrypi
-  - raspberry_pi_os
-  - debian
-  - jessie
-  - stretch
-  - bullseye
-  - centos_7
-
+    - centos_7
 dependencies:
 - role: drew1kun.rpi_network
   rpi_network_wifi_APs: "{{ rpi_bootstrap__rpi_network_wifi_APs }}"
