--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -3,63 +3,38 @@
 
 # DEPENDENCIES
 - name: "[main] Import dependencies installation tasks"
-  import_tasks: dependencies.yml
-  tags:
-  - rpi_bootstrap
-  - rpi_bootstrap_dependencies
+  ansible.builtin.import_tasks: dependencies.yml
+  tags: [ 'rpi_bootstrap', 'rpi_bootstrap_dependencies' ]
 
 # OS-SPECIFIC VARS & TASKS
 - name: "[main] Include {{ ansible_os_family }}-specific vars"
-  include_vars: "{{ ansible_os_family }}.yml"
-  tags: rpi_bootstrap
+  ansible.builtin.include_vars: "{{ ansible_os_family }}.yml"
+  tags: [ 'rpi_bootstrap', 'rpi_bootstrap_users' ]
 
+# LOCALE
 - name: "[main] Include {{ ansible_os_family }}-specific tasks for generating locales, upgrading distro etc."
-  include_tasks: "{{ ansible_os_family }}.yml"
+  ansible.builtin.include_tasks: "{{ ansible_os_family }}.yml"
   tags: rpi_bootstrap
 
 # USERS
-- name: "[main] Create specified users"
-  user:
-    name: "{{ item.username }}"
-    password: "{{ item.passwd }}"
-    groups: "{{ item.groups }}"
-    append: yes
-    shell: /bin/bash
-  with_items: "{{ rpi_bootstrap_users }}"
-  become: yes
-  no_log: yes  # don't show password hash in output
-  tags: rpi_bootstrap
+- name: "[main] Import user configuration tasks"
+  ansible.builtin.import_tasks: users.yml
+  tags: [ 'rpi_bootstrap', 'rpi_bootstrap_users' ]
 
-# Fully quoted because of the ':' on the line. See the Gotchas in the YAML docs.
-- name: "[main] Modify sudoers file: make sudo group members not being asked for sudo password"
-  lineinfile:
-    path: /etc/sudoers
-    state: present
-    regexp: '^%{{ rpi_bootstrap_su_group }}\s'
-    line: '%{{ rpi_bootstrap_su_group }} ALL=(ALL) NOPASSWD: ALL'
-    validate: '/usr/sbin/visudo -cf %s'
-  become: yes
-  when: rpi_bootstrap_sudonopasswd is defined and true
-  tags: rpi_bootstrap
+# HOSTNAME
+- name: "[main] Import hostname configuration tasks"
+  ansible.builtin.import_tasks: hostname.yml
+  tags: [ 'rpi_bootstrap', 'rpi_bootstrap_hostname' ]
 
-- name: 'Change root password'
-  user: name=root password={{ rpi_bootstrap_new_root_passwd }}
-  when: ansible_user_id != 'root'
+# TIMEZONE
+- name: "[main] Setting timezone"
+  ansible.builtin.timezone: name="{{ rpi_bootstrap_timezone }}" hwclock=UTC
   become: yes
-  no_log: yes  # don't show password hash in output
   tags: rpi_bootstrap
-
-# SHELL PROMPT
-- name: "[main] Import shell prompt configuration tasks"
-  import_tasks: prompt.yml
-  when: rpi_bootstrap_prompt
-  tags:
-  - rpi_bootstrap
-  - rpi_bootstrap_prompt
 
 # SYSTEM CONFIG
 - name: "[main] Setting EDITOR and TERM environment variables"
-  blockinfile:
+  ansible.builtin.blockinfile:
     path: /etc/profile.d/env_var.sh
     create: yes
     mode: 0644
@@ -69,33 +44,5 @@
       export EDITOR="/usr/bin/vim"
       export TERM="xterm-256color"  # For vim colors in tmux
     marker: "# {mark} ======== VIM role: Ansible managed block ========="
-  become: yes
-  tags: rpi_bootstrap
-
-- name: "[main] Setting hostname"
-  hostname: name={{ rpi_bootstrap_hostname }}
-  become: yes
-  tags: rpi_bootstrap
-
-- name: "[main] Modifying /etc/hosts (IPv4)"
-  lineinfile:
-    path: /etc/hosts
-    regexp: '(127.0.0.1)( *|\t*)(localhost)(.*)'
-    line: '\1\2\3 {{ rpi_bootstrap_hostname }}'
-    backrefs: yes
-  become: yes
-  tags: rpi_bootstrap
-
-- name: "[main] Modifying /etc/hosts (IPv6)"
-  lineinfile:
-    path: /etc/hosts
-    regexp: '(::1)( *|\t*)(localhost ip6-localhost ip6-loopback)(.*)'
-    line: '\1\2\3 {{ rpi_bootstrap_hostname }}'
-    backrefs: yes
-  become: yes
-  tags: rpi_bootstrap
-
-- name: "[main] Setting timezone"
-  timezone: name="{{ rpi_bootstrap_timezone }}" hwclock=UTC
   become: yes
   tags: rpi_bootstrap
